--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "react": "^16.8.3",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.3",
+    "react-player": "^1.9.3",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-soundplayer": "^1.0.4",
-    "unsemantic": "^1.2.3"
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
