--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "react": "^16.8.3",
+    "react-audio-player": "^0.11.0",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.3",
+    "react-h5-audio-player": "^1.1.0",
     "react-player": "^1.9.3",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
